# ap-airflow

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  LICENSE  README.md  SECURITY.md  clean-artifacts.py  cve-allowlist.yaml  cve-whitelist.yaml  repackage-providers.py
.circleci/: build_approval_slack_notification.json.j2  common.py  config.yml  config.yml copy.j2  config.yml.j2  cve-whitelist.yaml  cve-whitelist.yml  generate_circleci_config.py  kickoff_qa_tests.sh  new_build_slack_approval.json.j2  new_dev_build_slack_notification.json.j2  push.bash.j2  regression_test_slack_approval.json.j2  regression_test_slack_notification.json.j2  smoke_test_slack_notification.json.j2  test-airflow-image.py  test-requirements.txt  update_dockerfiles.py  verify_changelog_entries.py
.github/: PULL_REQUEST_TEMPLATE.md
1.10.10/: CHANGELOG.md
1.10.12/: CHANGELOG.md
1.10.13/: CHANGELOG.md
1.10.14/: CHANGELOG.md
1.10.15/: CHANGELOG.md
1.10.5/: CHANGELOG.md
1.10.6/: CHANGELOG.md
1.10.7/: CHANGELOG.md
2.0.0/: CHANGELOG.md
2.0.1/: CHANGELOG.md
2.0.2/: CHANGELOG.md
2.1.0/: CHANGELOG.md
2.1.1/: CHANGELOG.md
2.1.3/: CHANGELOG.md
2.1.4/: CHANGELOG.md
2.2.0/: CHANGELOG.md
2.2.1/: CHANGELOG.md
2.2.2/: CHANGELOG.md
package/: dev-requirements.txt  setup.cfg  setup.py
package/astronomer/: pyproject.toml  seed_log_template.py
package/astronomer/certified/: blueprint.py  plugin.py
package/astronomer/certified/static/: astro-theme.css
package/astronomer/certified/templates/: certified_base.html
package/tests/: conftest.py  test_plugin.py
test/: run.sh  (+2 more)
(+217 files in other folders)
