[metadata]
name = astronomer-certified-extensions
version = 1.0.0
url = https://github.com/astronomer/ap-airflow/
author = Astronomer
author_email = humans@astronomer.io
description = Astronomer Certified Airflow Extensions

[options]
python_requires = >=3.7
install_requires =
    packaging>=20.0
packages = find_namespace:
include_package_data = true
zip_safe = false

[options.package_data]
astronomer.certified.templates = *
astronomer.certified.static = *

[options.entry_points]
airflow.plugins =
    astronomer_certified_extensions = astronomer.certified.plugin:AstronomerCertifiedPlugin

[flake8]
exclude = venv/*,tox/*,specs/*,env/*
ignore = E123,E128,E266,E402,F405,E501,W503,E731,W601
max-line-length = 119

[mypy]
warn_unused_ignores = True

[mypy-airflow.*]
ignore_missing_imports = True
